--- a/stackoverflow-clone/vercel.json
+++ b/stackoverflow-clone/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "backend/index.js",
+        "src": "backend/server.js",
         "use": "@vercel/node"
       },
       {
@@ -12,7 +12,7 @@
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
+        "src": "/(.*)",
         "dest": "/backend/server.js"
       },
       {
